@@ -21,7 +21,10 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-20: bug fix in query option "sample".
                 (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
-                
+      
+    S2GRAPH-28: _to option gives wrong result on query.	
+                (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
+
   TASKS
 
     S2GRAPH-2: Update document and quick start environment to have recent set-up command changes.
